@@ -1,3 +1,7 @@
+2007-03-17
+	* crash fix from Thomas van Gulick <thomas@partyflock.nl> in
+	  conn_shrink(), passing &ptr, instead of ptr to realloc().
+
 2007-03-05  Paul Lindner  <lindner@inuus.com>
 	* Fix a number of places where (s)printf calls were using unsigned
 	  or signed formats that did not match their arguments.
